20.0.9
------
(RB=1253124)
modified MPConsistentHashRing iterator

20.0.8
------
(RB=1244383)
Adding SSL session resumption to Http1.1

20.0.7
------
(RB=1246458)
Allow configurable number of hash ring points per host to improve traffic balance

20.0.6
------
(RB=1248284)
Fix Client class to be backward compatible

20.0.5
------
(RB=1239452)
Support for injecting metadata in Rest.Li response

(RB=1227286)
Refactoring internal LoadBalancer interfaces to async model

(RB=1229750)
Added XXHash as an alternative to MD5 for PartitionAccessor

(RB=1231618)
Enable setting default values for custom type parameters.

(RB=1236289)
Set proper default for HttpServerBuilder class

(RB=1246492)
Add DistrbutionNonDiscreteRing for distribution-based routing

20.0.4
------
(RB=1223876)
Moved Entity Stream implementation to a new entity-stream module and made it generic. Added adapters between generic
Entity Stream and ByteString-specific Entity Stream so that existing R2 Streaming API didn't change.

(RB=1240888)
Add filter method in Multiplexer custom filter to filter all individual requests. This can be used to filter/check
if the combination of individual requests can be handled.

20.0.3
------
(RB=1235367)
Improving error logging in hash functions

20.0.2
------
(RB=1234469)
Change some degrader logging messages from 'warn' to 'info'

20.0.1
------
(RB=1234289)
Fix NPE for addFields, addMetadataFields, addPagingFields

20.0.0
------
(RB=1224742)
Request object should store the projection fields <PathSpec> in Set
(RB=1232556)
Tests fix for SI-5482(Request object should store the projection fields <PathSpec> in Set)

19.0.4
------
(RB=1220188)
PDSC to AVSC translator supports namespace override based on cmd option.
(RB=1230599)
Replace dependency on antlr with antlr-runtime.
(RB=1230938)
Update Apache commons-lang to 2.6.

19.0.3
------
(RB=1229115)
Exposing setter methods in FilterRequestContext to set the projection mask for CollectionResponse's METADATA and PAGING fields.
